--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Matthew Jigalin",
-  "name": "Matthew Jigalin Landing Page",
+  "short_name": "Sergey Kryukov",
+  "name": "Sergey Kryukov Landing Page",
   "icons": [],
   "start_url": ".",
   "display": "standalone",
